--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;family=Open+Sans:wght@400;600&amp;display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" href="css/home.css" />
 		<title>BlueSky | PortoFolio</title>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-HS01JPLPGX"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-HS01JPLPGX');
+		</script>
 	</head>
 	<body>
 		<header>
