--- a/index.html
+++ b/index.html
@@ -48,46 +48,49 @@
 				<h1>About Me.</h1>
 				<hr>
 				<span><b>"Teknologi hanyalah alat, positif negatif tergantung siapa drivernya"</b></span>
-				<p>Tahun (2025) ini Aku kelas 10 SMK jurusan TKJ, Aku mulai mengenal coding sejak kelas 7 SMP, awalnya karena ingin mencoba auto farm di sebuah game. Waktu itu, aku menemukan bahwa untuk menjalankan auto farm dibutuhkan script, tapi sayangnya script yang tersedia berbayar. Karena penasaran, aku iseng mencoba membuat script sendiri—dan ternyata berhasil! Dari situ, aku mulai tertarik mendalami coding lebih jauh. Sekarang, aku terus belajar dan mencoba berbagai bahasa pemrograman seperti C, HTML, CSS, dan JavaScript. Dalam proses belajarku, aku juga sering mengandalkan AI sebagai asisten untuk membantu memahami konsep dan menyelesaikan masalah coding yang aku hadapi.</p>
+				<p>Tahun (2025) ini Aku kelas 10 SMK jurusan TKJ, Aku sebenarnya kelas 11 cuma karena Aku <i><b>"Cuti"</i></b> sekolah setahun jadinya sekarang masih kelas 10. Aku mulai mengenal <i><b>coding</b></i> sejak kelas 7 SMP, awalnya karena ingin mencoba auto farm di <i><b>sebuah game.</i></b> Waktu itu, aku menemukan bahwa untuk menjalankan auto farm dibutuhkan script, tapi sayangnya script yang tersedia berbayar. Karena penasaran, aku iseng <i><b>Mencoba</b></i> membuat script sendiri—dan ternyata berhasil! Dari situ, aku mulai tertarik mendalami coding lebih jauh. Sekarang, aku terus belajar dan mencoba berbagai bahasa pemrograman seperti C, HTML, CSS, dan JavaScript. Dalam <i><b>proses</b></i> belajarku, aku juga sering mengandalkan AI sebagai asisten untuk membantu memahami konsep dan menyelesaikan masalah coding yang aku hadapi.</p>
 			</div>
 
 			<div class="skill-container">
-        <h2>Skill</h2><hr class="pemisah">
-        <div class="icons">
-			<img src="img/html.png">
-            <img src="img/js.png">
-            <img src="img/css.png">
-            <img src="img/c.png">
-            <img src="img/canva.png">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Microsoft_Office_logo_%282013%E2%80%932019%29.png">
-            <img src="img/corel.png">
-            <img src="img/git.png">
-        </div><hr class="pemisah">
-        <div class="categories">
-            <div class="category">
-                <img src="img/tt.png">
-                <p>Creator</p>
-            </div>
-            <div class="category">
-                <img src="img/game.png">
-                <p>Gaming</p>
-            </div>
-            <div class="category">
-                <img src="img/cam.png">
-                <p>Photograph</p>
-            </div>
-        </div>
-    </div>
+				<h2 class="h2-skill" style="margin-top: 50px;">Skill</h2>
+				<!-- <hr class="pemisah"> -->
+				<div class="icons">
+					<img src="img/html.png">
+					<img src="img/js.png">
+					<img src="img/css.png">
+					<img src="img/c.png">
+					<img src="img/canva.png">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Microsoft_Office_logo_%282013%E2%80%932019%29.png">
+					<img src="img/corel.png">
+					<img src="img/git.png">
+				</div>
+				<h2 class="h2-skill">Another skill</h2>
+				<!-- <hr class="pemisah"> -->
+				<div class="categories">
+					<div class="category">
+						<img src="img/tt.png">
+						<p>Creator</p>
+					</div>
+					<div class="category">
+						<img src="img/game.png">
+						<p>Gaming</p>
+					</div>
+					<div class="category">
+						<img src="img/cam.png">
+						<p>Photograph</p>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<section id="bawah" class="credit">
             <h2>Don't forget to <span style="font-family: 'Great Vibes', cursive;">be Grateful</span></h2>
             <p>Believe in yourself and all that you are. Know that there is something inside you that is greater than any obstacle.</p>
-            <div class="credit-icons">
-                <a href="https://instagram.com/blueskyzii" id="a1"><i class="fab fa-instagram"></i></a>
-                <a href="https://discord.com/users/1211886368565895221" id="a1"><i class="fab fa-discord"></i></a>
-                <a href="mailto:alzidanirafa.01@gmail.com" id="a1"><i class="fas fa-envelope"></i></a>
-            </div>
+			<div class="credit-icons">
+				<a href="https://instagram.com/blueskyzii" id="a1"><i class="fab fa-instagram"></i></a>
+				<a href="https://discord.com/users/1211886368565895221" id="a1"><i class="fab fa-discord"></i></a>
+				<a href="mailto:alzidanirafa.01@gmail.com" id="a1"><i class="fas fa-envelope"></i></a>
+			</div>
         </section>
 		<script src="js/main.js"></script>
 	</body>
