--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-		<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;family=Open+Sans:wght@400;600&amp;display=swap" rel="stylesheet"/>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;family=Open+Sans:wght@400;600&amp;display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="css/home.css" />
 		<title>BlueSky | PortoFolio</title>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-HS01JPLPGX"></script>
 		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-HS01JPLPGX');
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+			gtag('config', 'G-HS01JPLPGX');
 		</script>
 	</head>
 	<body>
@@ -27,7 +29,7 @@
 				<h2>Hello,</h2>
 				<h1>I am Rafa Ahmad Alzidani</h1>
 				<b>
-					<p>Web Developer || Junior || 10th grade</p>
+					<p>Web Developer || Junior Developer || 10th grade</p>
 					<p>
 						5 years of
 						<span style="color: #eeff00ef">otodidak programming</span>
@@ -37,7 +39,7 @@
 					<img src="img/me.jpg" />
 				</div>
 				<div class="lets-container">
-					<a href="https://wa.me/6285182012498" target="_blank"">
+					<a href="https://wa.me/6285182012498" target="_blank">
 						<button>Let's Talk -></button>
 					</a>
 				</div>
@@ -46,37 +48,43 @@
 		<div class="main">
 			<div class="about-container">
 				<h1>About Me.</h1>
-				<hr>
+				<hr />
 				<span><b>"Teknologi hanyalah alat, positif negatif tergantung siapa drivernya"</b></span>
-				<p>Tahun (2025) ini Aku kelas 10 SMK jurusan TKJ, Aku sebenarnya kelas 11 cuma karena Aku <i><b>"Cuti"</i></b> sekolah setahun jadinya sekarang masih kelas 10. Aku mulai mengenal <i><b>coding</b></i> sejak kelas 7 SMP, awalnya karena ingin mencoba auto farm di <i><b>sebuah game.</i></b> Waktu itu, aku menemukan bahwa untuk menjalankan auto farm dibutuhkan script, tapi sayangnya script yang tersedia berbayar. Karena penasaran, aku iseng <i><b>Mencoba</b></i> membuat script sendiri—dan ternyata berhasil! Dari situ, aku mulai tertarik mendalami coding lebih jauh. Sekarang, aku terus belajar dan mencoba berbagai bahasa pemrograman seperti C, HTML, CSS, dan JavaScript. Dalam <i><b>proses</b></i> belajarku, aku juga sering mengandalkan AI sebagai asisten untuk membantu memahami konsep dan menyelesaikan masalah coding yang aku hadapi.</p>
+				<p
+					>Tahun (2025) ini Aku kelas 10 SMK jurusan TKJ, Aku sebenarnya kelas 11 cuma karena Aku <i><b>"Cuti"</b></i> sekolah setahun jadinya sekarang masih kelas 10. Aku mulai mengenal
+					<i><b>coding</b></i> sejak kelas 7 SMP, awalnya karena ingin mencoba auto farm di <i><b>sebuah game.</b></i> Waktu itu, aku menemukan bahwa untuk menjalankan auto farm dibutuhkan script,
+					tapi sayangnya script yang tersedia berbayar. Karena penasaran, aku iseng <i><b>Mencoba</b></i> membuat script sendiri—dan ternyata berhasil! Dari situ, aku mulai tertarik mendalami coding
+					lebih jauh. Sekarang, aku terus belajar dan mencoba berbagai bahasa pemrograman seperti C, HTML, CSS, dan JavaScript. Dalam <i><b>proses</b></i> belajarku, aku juga sering mengandalkan AI
+					sebagai asisten untuk membantu memahami konsep dan menyelesaikan masalah coding yang aku hadapi.</p
+				>
 			</div>
 
 			<div class="skill-container">
-				<h2 class="h2-skill" style="margin-top: 50px;">Skill</h2>
+				<h2 class="h2-skill" style="margin-top: 50px">Skill</h2>
 				<!-- <hr class="pemisah"> -->
 				<div class="icons">
-					<img src="img/html.png">
-					<img src="img/js.png">
-					<img src="img/css.png">
-					<img src="img/c.png">
-					<img src="img/canva.png">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Microsoft_Office_logo_%282013%E2%80%932019%29.png">
-					<img src="img/corel.png">
-					<img src="img/git.png">
+					<img src="img/html.png" />
+					<img src="img/js.png" />
+					<img src="img/css.png" />
+					<img src="img/c.png" />
+					<img src="img/canva.png" />
+					<img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Microsoft_Office_logo_%282013%E2%80%932019%29.png" />
+					<img src="img/corel.png" />
+					<img src="img/git.png" />
 				</div>
 				<h2 class="h2-skill">Another skill</h2>
 				<!-- <hr class="pemisah"> -->
 				<div class="categories">
 					<div class="category">
-						<img src="img/tt.png">
+						<img src="img/tt.png" />
 						<p>Creator</p>
 					</div>
 					<div class="category">
-						<img src="img/game.png">
+						<img src="img/game.png" />
 						<p>Gaming</p>
 					</div>
 					<div class="category">
-						<img src="img/cam.png">
+						<img src="img/cam.png" />
 						<p>Photograph</p>
 					</div>
 				</div>
@@ -84,14 +92,14 @@
 		</div>
 
 		<section id="bawah" class="credit">
-            <h2>Don't forget to <span style="font-family: 'Great Vibes', cursive;">be Grateful</span></h2>
-            <p>Believe in yourself and all that you are. Know that there is something inside you that is greater than any obstacle.</p>
+			<h2>Don't forget to <span style="font-family: 'Great Vibes', cursive">be Grateful</span></h2>
+			<p>Believe in yourself and all that you are. Know that there is something inside you that is greater than any obstacle.</p>
 			<div class="credit-icons">
 				<a href="https://instagram.com/blueskyzii" id="a1"><i class="fab fa-instagram"></i></a>
 				<a href="https://discord.com/users/1211886368565895221" id="a1"><i class="fab fa-discord"></i></a>
 				<a href="mailto:alzidanirafa.01@gmail.com" id="a1"><i class="fas fa-envelope"></i></a>
 			</div>
-        </section>
+		</section>
 		<script src="js/main.js"></script>
 	</body>
 </html>
